# jellovm

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: gc.c  main.c  vm.c
src/bytecode/: check.c  loader.c
src/include/: jello.h
src/include/jello/: check.h  internal.h
src/include/jello/internal/: ops_decl.h  vm_internal.h
src/types/: abstract.c  array.c  box.c  bytes.c  function.c  list.c  object.c  strutil.c
src/vm/: box.c  call.c  exc.c  frame.c  interp.c  profile.c  reg.c  spill.c
src/vm/ops/: dispatch.c  exec_loop.c  ops_arith.c  ops_array.c  ops_box.c  ops_builtins.c  ops_bytes.c  ops_call.c  ops_const.c  ops_control.c  ops_list.c  ops_obj.c
